# upenn_curf_scraper

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: filter.rs  lib.rs  main.rs  process_opportunities.rs  scrape_links.rs  scrape_opportunities.rs  update_auth.rs
