[package]
name = "upenn_curf_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2", features=["derive"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util"]}
reqwest = {version = "0.11"}
serde = {version = "1.0", features = ["derive"]}
ron = "0.8"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
open = "4.1"